--- a/app/globals.css
+++ b/app/globals.css
@@ -17,5 +17,10 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-noto-sans);
+}
+
+
+.custom-btn-shadow:focus {
+  box-shadow: 0px 0px 0px 4px rgba(68, 76, 231, .12)
 }
